test/parser.d/invalid/typedef-unit-2.souc.bad
import whatever

def unit Unit = { }
